--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -31,7 +31,7 @@ body {
   }
 
   button {
-    margin: 0 1.4rem;
+    margin-right: 1.4rem;
   }
 }
 
@@ -57,6 +57,7 @@ button {
   font-size: 90%;
   border: none;
   padding: 0.5rem 0.6rem;
+  cursor: pointer;
 
   &:hover {
     background-color: palevioletred;
