Show event information in a better looking fashion

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -65,3 +65,16 @@ button {
     background-color: palevioletred;
   }
 }
+
+dl.event-details {
+  line-height: 2.4rem;
+
+  dt {
+    float: left;
+  }
+
+  dd {
+    margin-left: 30px;
+    font-size: 110%;
+  }
+}
